Add Authentication with JWT token for generate API call
