# app/Http/Controllers/AuthController.php
@@ -1,0 +1,121 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\JsonResponse;
+use Illuminate\Support\Facades\Auth;
+use App\Http\Controllers\Controller;
+use OpenApi\Annotations as OA;
+
+class AuthController extends Controller
+{
+    /**
+     * Create a new AuthController instance.
+     *
+     * @return void
+     */
+    public function __construct()
+    {
+        $this->middleware('auth:api', ['except' => ['login']]);
+    }
+
+    /**
+     * Get a JWT via given credentials.
+     *
+     * @return JsonResponse
+     *
+     * @OA\Post(
+     *      path="/auth/login",
+     *      operationId="authUser",
+     *      summary="Get token to works with API for admin tasks",
+     *      description="Get token for existent user",
+     *      tags={"Auth"},
+     *      @OA\RequestBody(
+     *          @OA\JsonContent(
+     *              allOf={
+     *                  @OA\Schema(
+     *                      @OA\Property(property="email", type="string", example="user@example.com"),
+     *                      @OA\Property(property="password", type="string", example="12345"),
+     *                 )
+     *              }
+     *           )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="OK",
+     *          @OA\JsonContent(description="Current token",
+     *              @OA\Property(property="token", type="string", example="<token>", description="Admin Authentication Token"),
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="400",
+     *          description="Bad Request",
+     *          @OA\JsonContent(
+     *                  @OA\Property(property="error", type="string", example="Wrong request!")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response="404",
+     *          description="Resource not found"
+     *      )
+     *  )
+     */
+    public function login()
+    {
+        $credentials = request(['email', 'password']);
+
+        if (! $token = auth('api')->attempt($credentials)) {
+            return response()->json(['error' => 'Unauthorized'], 401);
+        }
+
+        return $this->respondWithToken($token);
+    }
+
+    /**
+     * Get the authenticated User.
+     *
+     * @return JsonResponse
+     */
+    public function me()
+    {
+        return response()->json(auth('api')->user());
+    }
+
+    /**
+     * Log the user out (Invalidate the token).
+     *
+     * @return JsonResponse
+     */
+    public function logout()
+    {
+        auth('api')->logout();
+
+        return response()->json(['message' => 'Successfully logged out']);
+    }
+
+    /**
+     * Refresh a token.
+     *
+     * @return JsonResponse
+     */
+    public function refresh()
+    {
+        return $this->respondWithToken(auth('api')->refresh());
+    }
+
+    /**
+     * Get the token array structure.
+     *
+     * @param  string $token
+     *
+     * @return JsonResponse
+     */
+    protected function respondWithToken($token)
+    {
+        return response()->json([
+            'access_token' => $token,
+            'token_type' => 'bearer',
+            'expires_in' => auth('api')->factory()->getTTL() * 60
+        ]);
+    }
+}
